# GPU-Denoiser

./: .gitignore  Doxyfile  README.md
Docs/html/: _d_c_t-_denoise_8cc.html  _d_c_t-_denoise_8cc.js  _d_c_t-_denoise_8cc__incl.map  _d_c_t-_denoise_8cc__incl.md5  _d_c_t-_denoise_8cc_a3c04138a5bfe5d72780bb7e82a18e627_cgraph.md5  _d_c_t-_denoise_8cc_a7d440a1653361f1a24bbc5dd434b5f18_icgraph.map  _d_c_t-_denoise_8cc_a7d440a1653361f1a24bbc5dd434b5f18_icgraph.md5  _d_c_t-_denoise_8cc_a8170bb6f91c6b6c8356fa2e8c8355140_icgraph.map  _d_c_t-_denoise_8cc_a8170bb6f91c6b6c8356fa2e8c8355140_icgraph.md5  _d_c_t-_denoise_8cc_aad27174881137779332ea0f7138c6e43_icgraph.map  _d_c_t-_denoise_8cc_aad27174881137779332ea0f7138c6e43_icgraph.md5  _d_c_t-_denoise_8cc_ac3a6e6de2ab7e5f397a4550a1e823764_icgraph.map  _d_c_t-_denoise_8cc_ac3a6e6de2ab7e5f397a4550a1e823764_icgraph.md5  _d_c_t-_denoise_8cc_source.html  _d_c_t-_denoise_8h.html  _d_c_t-_denoise_8h.js  _d_c_t-_denoise_8h__dep__incl.map  _d_c_t-_denoise_8h__dep__incl.md5  _d_c_t-_denoise_8h__incl.map  _d_c_t-_denoise_8h__incl.md5  _d_c_t-_denoise_8h_source.html  _d_c_t_function_8cc.html  (+228 more)
GPU-Denoiser-CUDA-Version/: CMakeLists.txt  Denoiser.cu  FonctionDemo5.cu  Fonctions.cu  Fonctions.h  Tp5_IFT3205.cu
GPU-Denoiser-CUDA-Version/Images/: lena512_Degraded.pgm  lena512_Restored.pgm
TpIFT3205_Debruitage/: TransProg.sh
legacy_code/: DEGRADED.pgm  FonctionDemo5.c  FonctionDemo5.h  Tp5_IFT3205  Tp5_IFT3205.c  Tp5_IFT3205.c~  lena512_Degraded.pgm  lena512_Restored.pgm  lena_Restored_Q2.2_MSE157.pgm  lena_Restored_Q2.X_MSE58.pgm
(+213 files in other folders)
